--- a/package.json
+++ b/package.json
@@ -30,9 +30,22 @@
   },
   "homepage": "https://github.com/alvis/react-temporal-network#readme",
   "devDependencies": {
+    "@types/d3": "^4.10.0",
+    "@types/react": "^16.0.5",
     "standard-version": "^4.2.0",
     "typescript": "^2.5.2"
   },
   "dependencies": {
+    "bind-decorator": "^1.0.11",
+    "d3": "^4.10.2",
+    "d3-bboxCollide": "^1.0.3",
+    "d3-force-bounce": "^0.5.1",
+    "d3-force-surface": "^0.5.1",
+    "d3-scale-chromatic": "^1.1.1",
+    "konva": "^1.6.8",
+    "react": "^15.6.1",
+    "react-konva": "^1.1.4",
+    "react-player-controls": "^0.5.17",
+    "react-resize-aware": "^2.7.0"
   }
 }
